Async pathfinding/targetfinding + fixes squash commit